# dit

./: .gitignore  Cargo.toml  README.md  RELEASE.md  agents.md
crates/dit-cli/: Cargo.toml
crates/dit-cli/src/: main.rs
crates/dit-core/: Cargo.toml
crates/dit-core/src/: assets.rs  canonical.rs  git_ops.rs  lib.rs  lock.rs  repository.rs
crates/dit-core/src/figma/: downloader.rs  fig_converter.rs  mod.rs
crates/dit-core/src/types/: component.rs  effect.rs  enums.rs  export.rs  layout.rs  mod.rs  node.rs  paint.rs  paths.rs  primitives.rs  project.rs  repository.rs  style.rs  typography.rs  vector.rs
crates/dit-core/tests/: asset_dedup.rs  deterministic.rs  e2e_commit.rs  fixtures.rs  lossless_roundtrip.rs  workflow.rs
crates/dit-gui/: Cargo.toml  tauri.conf.json
crates/dit-gui/capabilities/: default.json
crates/dit-gui/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/dit-gui/frontend/src/: App.tsx  commands.ts  index.css  types.ts
crates/dit-gui/frontend/src/components/: ActionToolbar.tsx  BranchSelector.tsx  CommandBar.tsx  CommitList.tsx  CommitOverlay.tsx  DiffTreeViewer.tsx  DiffView.tsx  MainLayout.tsx  PreviewPanel.tsx  StartupFlow.tsx  TreeViewer.tsx
crates/dit-gui/icons/: icon.icns
crates/dit-gui/src/: lib.rs  main.rs
docs/: merge-strategy.md
scripts/: download-fig.mjs  package-lock.json  package.json
