[workspace]
members = [
    "crates/dit-core",
    "crates/dit-cli",
    "crates/dit-gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
git2 = "0.19"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"
