[package]
name = "dit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DIT command-line interface"

[[bin]]
name = "dit"
path = "src/main.rs"

[dependencies]
dit-core = { path = "../dit-core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
dotenvy = "0.15"
