[package]
name = "dit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for DIT - design version control"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
git2.workspace = true
tracing.workspace = true
fig2json = "0.3"
dirs = "6"

[dev-dependencies]
tempfile.workspace = true
dotenvy = "0.15"
